// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/UserForm creates object to send correctly for editing user: readonly username edit 1`] = `
<input
  className="form-control"
  id="username"
  name="username"
  onBlur={[Function]}
  onChange={[Function]}
  readOnly={true}
  type="text"
  value="opensrp"
/>
`;

exports[`src/components/UserForm renders correctly: first name input 1`] = `
<input
  className="form-control"
  id="firstName"
  name="firstName"
  onBlur={[Function]}
  onChange={[Function]}
  type="text"
  value=""
/>
`;
